# openai_proxy

./: .gitignore  README.md  alembic.ini  config.json.example  create_standalone_client.py  docker-compose-backend.yml  docker-compose-dev.yml  docker-compose.yml  install_client.py  models.db  pyproject.toml  rag-client.py  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 001_audit_logs.py  20250831_01_remove_model_type_from_models.py  20250831_02_user_group_m2m.py  ac696a9ca787_init_schema.py
backends/grafana/dashboards/: fastapi.json
backends/loki/: loki.yaml
backends/otel-collector/: otel-collector-config-simple.yaml  otel-collector-config.yaml
backends/prometheus/: prometheus.yml
backends/tempo/: tempo.yaml
client/: IMPLEMENTATION.md  README.md  USAGE.md  pyproject.toml
client/src/ygo74/fastapi_openai_rag_client/: __init__.py  __main__.py
client/src/ygo74/fastapi_openai_rag_client/commands/: groups.py  models.py  users.py
client/src/ygo74/fastapi_openai_rag_client/core/: auth.py  client.py  utils.py
scripts/: check-lgtm.ps1  diagnose-dev.ps1  run-dev.ps1  run-prod.ps1  start-dev.ps1  start-prod.ps1  stop-services.ps1
src/: Dockerfile  main.py  rag-client.py
src/api/: v1.py
src/api/endpoints/: admin.py  groups.py  (+2 more)
src/infrastructure/: database.py  group_crud.py  model_crud.py
src/ygo74/: __init__.py
tests/: conftest.py  test_admin.py  test_group_repository.py  test_group_service.py  test_groups.py  test_main.py  test_mappers.py  test_model_repository.py  test_model_service.py
tests/application/: test_audit_service.py  test_group_service.py  test_model_service.py  test_model_service_fetch_models.py  test_model_service_group_management.py  test_user_service.py
tests/domain/: test_group.py  test_llm_client_protocol.py  test_model.py  test_user_models.py
tests/infrastructure/: __init__.py  test_azure_openai_proxy_client.py  test_base_repository.py  test_client_factory.py  test_group_repository.py  test_http_client_factory.py  test_model_repository.py  test_openai_proxy_client.py  test_retry_handler.py  test_unit_of_work.py  test_user_repository.py
tests/interfaces/: test_groups_endpoints.py  test_models_endpoints.py  test_models_group_association_endpoints.py  test_user_endpoints.py  test_users_endpoints.py
tools/: Init_database.py  langchain_call_proxy.py  test_api.py  test_keycloak_auth.py  test_streaming_direct.py
tools/auth/: check_keycloak_status.py  generate_debug_token.py  setup_keycloak.py  test_jwt_debug.py  test_keycloak_auth.py
tools/langchain/: langchain_call_proxy.py  langchain_call_proxy_for_image.py  langchain_call_proxy_for_pdf.py  langchain_call_proxy_with_bearer_token.py  langchain_call_proxy_with_tools.py
tools/openai/: openai_call_proxy_for_image.py  openai_call_proxy_with_bearer_token.py
(+113 files in other folders)
